force-app/main/default/objects/Account_Category__c/Account_Category__c.object-meta.xml
<CustomObject>
    <label>Account Category</label>
    <pluralLabel>Account Categories</pluralLabel>
    <nameField>
        <label>Account Category Number</label>
        <displayFormat>ACCAT-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction object mapping accounts (customers) to product categories they deal in (MOD-01 Master Data Management)</description>
</CustomObject>