force-app/main/default/objects/Account_Category__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>MasterDetail</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Categories</relationshipLabel>
    <relationshipName>Account_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>