force-app/main/default/objects/Account_Category__c/fields/Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Assigned_By__c</fullName>
    <label>Assigned By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Account Categories</relationshipLabel>
    <relationshipName>Assigned_Account_Categories</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>