force-app/main/default/objects/Account_Category__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Account Category Mappings</relationshipLabel>
    <relationshipName>Account_Category_Mappings</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>