force-app/main/default/objects/Account_Category__c/fields/Category_Level__c.field-meta.xml
<CustomField>
    <fullName>Category_Level__c</fullName>
    <label>Category Level</label>
    <formula>TEXT(Category__r.Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>