force-app/main/default/objects/Account_Category__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>