force-app/main/default/objects/Account_Category__c/listViews/Active_Account_Categories.listView-meta.xml
<ListView>
    <fullName>Active_Account_Categories</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Category__c</columns>
    <columns>Category_Level__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Active Account Categories</label>
</ListView>